# simple_motor_controller_g2

./: CMakeLists.txt  package.xml
include/smc_g2_io/: smc_g2_io.h
simple_motor_controller_g2/: CMakeLists.txt  package.xml
smc_g2_io/: CMakeLists.txt  package.xml
smc_g2_io/include/smc_g2_io/: protocol.h  smc_g2_io.h
smc_g2_io/launch/: demo.launch
smc_g2_io/src/: demo_io.cpp  smc_g2_io.cpp
smc_g2_operator/: CMakeLists.txt  package.xml
smc_g2_operator/include/smc_g2_operator/: smc_g2_operator.h
smc_g2_operator/launch/: key_operation.launch
smc_g2_operator/src/: key_operator.cpp  operator_node.cpp  smc_g2_operator.cpp
