<?xml version="1.0"?>
<package format="2">
  <name>smc_g2_operator</name>
  <version>0.0.0</version>
  <description>Pololu High-Power Simple Motor Controller G2 package</description>
  <maintainer email="sgrsn1711@gmail.com">Hidaka Sato</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/high_power_simple_motor_controller_g2</url> -->
  <!-- <url type="website">note.suzakugiken.jp</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>smc_g2_io</depend>
</package>
